sorted layout issues
main container wasn't set up correctly and transpired from there to all aspects

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -58,6 +58,13 @@
     color: var(--text-color-dark);
     background-color: var(--bg-dark);
   }
+
+  textarea {
+    resize: vertical; /* Allows only vertical resizing */
+
+    min-height: 300px;
+    max-height: 600px;
+  }
 }
 
 @layer components {
